tests/ui/fn_as_param.stderr
error: mismatch types
   --> fn_as_param.ray:10:7
    |
 LL |     f(g);
    |       ^ expected `fn() -> ()`, found `fn(i32) -> ()`

